--- a/cliente/templates/cliente/index.html
+++ b/cliente/templates/cliente/index.html
@@ -2,11 +2,12 @@
 <html lang="es">
 
 <head>
+  {% load static %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Al Fondo Bar</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="{% static 'cliente/css/style.css' %}">
 </head>
 
 <body>
@@ -49,7 +50,7 @@
     <div class="carousel-inner">
       <!--Imagenes Carrusel-->
       <div class="carousel-item active img-carrousel">
-        <img src="./assets/img/bar1.jpg" class="d-block w-100" alt="...">
+        <img src="{% static 'cliente/img/bar1.jpg' %}" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item img-carrousel">
         <img src="./assets/img/bar-1-1024x576.jpg" class="d-block w-100" alt="...">
