correcion codigo en el INDEX

--- a/cliente/templates/cliente/index.html
+++ b/cliente/templates/cliente/index.html
@@ -53,10 +53,10 @@
         <img src="{% static 'cliente/img/bar1.jpg' %}" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item img-carrousel">
-        <img src="{% static 'cliente/img/bar-1-1024x576.jpg %}" class="d-block w-100" alt="...">
+        <img src="{% static 'cliente/img/bar-1-1024x576.jpg' %}" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item img-carrousel" >
-        <img src="{% static 'cliente/img/bar2.jpg %}" class="d-block w-100" alt="...">
+        <img src="{% static 'cliente/img/bar2.jpg' %}" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#Auto" data-bs-slide="prev">
@@ -75,28 +75,28 @@
         <div class="row ">
           <!-- Tarjeta Cocteles -->
           <div class="col-6 col-sm-6 mb-4 col-md-3">
-            <img src="{% static 'cliente/img/cocteles.jpeg %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
+            <img src="{% static 'cliente/img/cocteles.jpeg' %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
             <h2 class="Titulo">Cocteles</h2> <!-- Clase titulo crear clase-->
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
             <a href="cocteles.html"><button class="botones">Cocteles</button></a> <!-- Clase botones crear clase -->
           </div>
           <!-- Tarjeta Entrada -->
           <div class="col-6 col-sm-6 col-md-3">
-            <img src="{% static 'cliente/img/plato-entrada-.jpg %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
+            <img src="{% static 'cliente/img/plato-entrada-.jpg' %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
             <h2 class="Titulo">Entrada</h2> <!-- Clase titulo crear clase -->
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
             <a href="entrada.html"><button class="botones"> Entrada </button></a> <!-- Clase botones crear clase -->
           </div>
           <!-- Tarjeta Tragos -->
           <div class="col-6 col-sm-6 mb-4 col-md-3">
-            <img src="{% static 'cliente/img/tragos1.png %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
+            <img src="{% static 'cliente/img/tragos1.png' %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
             <h2 class="Titulo">Tragos</h2> <!-- Clase titulo crear clase -->
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
             <a href="tragos.html"><button class="botones"> Tragos </button></a> <!-- Clase botones crear clase -->
           </div>
           <!-- Tarjeta Pizza -->
           <div class="col-6 col-sm-6 col-md-3">
-            <img src="{% static 'cliente/img/pizza.jpg %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
+            <img src="{% static 'cliente/img/pizza.jpg' %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
             <h2 class="Titulo">Pizza</h2> <!-- Clase titulo crear clase -->
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
             <a href="pizza.html"><button class="botones"> Pizza </button></a> <!-- Clase botones crear clase -->
