--- a/cliente/templates/cliente/cocteles.html
+++ b/cliente/templates/cliente/cocteles.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  {% load static %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Al Fondo Bar</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="{% static 'cliente/css/style.css' %}">
 </head>
 <body>
   <!-- Barra de navegacion -->
   <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Al Fondo Bar</a>
+      <a class="navbar-brand" href="{% url 'index' %}">Al Fondo Bar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="./entrada.html">Entrada</a>
+            <a class="nav-link " aria-current="page" href="{% url 'entrada' %}">Entrada</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="./cocteles.html">Cocteles</a>
+            <a class="nav-link " href="{% url 'cocteles' %}">Cocteles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./tragos.html">Tragos</a>
+            <a class="nav-link" href="{% url 'tragos' %}">Tragos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pizza.html">Pizza</a>
+            <a class="nav-link" href="{% url 'pizza' %}">Pizza</a>
           </li>
         </ul>
-        <a class="btn btn-secondary text-white fw-bold mx-lg-2 my-2 btn-pedido" href="./form.html">
+        <a class="btn btn-secondary text-white fw-bold mx-lg-2 my-2 btn-pedido" href="{% url 'pedido' %}">
           Pedido
         </a>
         <form class="d-flex" role="search">
@@ -47,11 +48,11 @@
     <div class="row row-gap-3 justify-content-center">
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/pina-colada.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/pina-colada.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Piña colada</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-1">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
@@ -59,11 +60,11 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/daiquiri.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/daiquiri.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titutlo">Daiquiris</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-2">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
@@ -71,11 +72,11 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/mangosour.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/mangosour.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Mango Sour</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-3">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
@@ -83,11 +84,11 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/caipirinha.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/caipirinha.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Caipirinha</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-4">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
@@ -95,11 +96,11 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/tragos1.png);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/tragos1.png' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Tequila Sunrise</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-5">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
@@ -107,11 +108,11 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/whisky-sour.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/whisky-sour.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Caipiroska</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-6">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
@@ -126,7 +127,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" ></button>
           </div>
           <div class="modal-body">
-            <p id="contenedor">Ron blanco, crema de coco, crema de leche, azucar.</p>
+            <p id="contenedor">Ron blanco, crema de coco, crema de leche, azúcar.</p>
           </div>
           <div class="modal-footer">
             <h5 class="titulo">5.500</h5>
@@ -144,7 +145,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p id="contenedor">Ron blanco, zumo de limon. Azucar glass</p>
+            <p id="contenedor">Ron blanco, zumo de limón, azúcar glass.</p>
           </div>
           <div class="modal-footer">
             <h5 class="titulo">4.900</h5>
@@ -162,7 +163,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p id="contenedor">Pisco, jugo de limon, pulpa mango. Azucar glass</p>
+            <p id="contenedor">Pisco, jugo de limón, pulpa de mango, azúcar glass.</p>
           </div>
           <div class="modal-footer">
             <h5 class="titulo">4.500</h5>
@@ -180,7 +181,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p id="contenedor">Cachaca 51, limon esmeralda, azucar glass.</p>
+            <p id="contenedor">Cachaca 51, limón esmeralda, azúcar glass.</p>
           </div>
           <div class="modal-footer">
             <h5 class="titulo">4.500</h5>
@@ -216,7 +217,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p id="contenedor">Vodka, limon esmeralda, azucar glass.</p>
+            <p id="contenedor">Vodka, limón esmeralda, azúcar glass.</p>
           </div>
           <div class="modal-footer">
             <h5 class="titulo">4.500</h5>
@@ -227,6 +228,6 @@
       </div>
     </div>
   </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>    
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>    
 </body>
 </html>
