--- a/cliente/templates/cliente/entrada.html
+++ b/cliente/templates/cliente/entrada.html
@@ -2,19 +2,19 @@
 <html lang="es">
 
 <head>
+  {% load static %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Al Fondo Bar</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
-</head>
+  <link rel="stylesheet" href="{% static 'cliente/css/style.css' %}">
 </head>
 
 <body>
   <!-- Barra de Navegacion -->
   <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Al Fondo Bar</a>
+      <a class="navbar-brand" href="{% url 'index' %}">Al Fondo Bar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,19 +22,19 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="./entrada.html">Entrada</a>
+            <a class="nav-link" aria-current="page" href="{% url 'entrada' %}">Entrada</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="./cocteles.html">Cocteles</a>
+            <a class="nav-link" href="{% url 'cocteles' %}">Cocteles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./tragos.html">Tragos</a>
+            <a class="nav-link" href="{% url 'tragos' %}">Tragos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pizza.html">Pizza</a>
+            <a class="nav-link" href="{% url 'pizza' %}">Pizza</a>
           </li>
         </ul>
-        <a class="btn btn-secondary text-white fw-bold mx-lg-2 my-2 btn-pedido" href="./form.html">
+        <a class="btn btn-secondary text-white fw-bold mx-lg-2 my-2 btn-pedido" href="{% url 'pedido' %}">
           Pedido
         </a>
         <form class="d-flex" role="search">
@@ -51,7 +51,7 @@
     <div class="row row-gap-3 justify-content-center">
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/patatas-fritas.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/patatas-fritas.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Papa Fritas</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-1">
@@ -63,7 +63,7 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/Empanadas.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/Empanadas.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titutlo">Empanadas</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-2">
@@ -75,7 +75,7 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/Quesadilla.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/Quesadilla.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Quesadillas</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-3">
@@ -87,7 +87,7 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/chorrillana.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/chorrillana.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Chorrillana</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-4">
@@ -99,7 +99,7 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/Salchipapa.png);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/Salchipapa.png' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Salchipapas</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-5">
@@ -111,7 +111,7 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/PAPAS-SUPREMAS.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/PAPAS-SUPREMAS.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Papa suprema</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-6">
