--- a/cliente/templates/cliente/pizza.html
+++ b/cliente/templates/cliente/pizza.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  {% load static %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Al Fondo Bar</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="{% static 'cliente/css/style.css' %}">
 </head>
 <body>
-  <!--Barra de navegacion -->
+  <!-- Barra de navegación -->
   <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Al Fondo Bar</a>
+      <a class="navbar-brand" href="{% url 'index' %}">Al Fondo Bar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="./entrada.html">Entrada</a>
+            <a class="nav-link" aria-current="page" href="{% url 'entrada' %}">Entrada</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="./cocteles.html">Cocteles</a>
+            <a class="nav-link" href="{% url 'cocteles' %}">Cocteles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./tragos.html">Tragos</a>
+            <a class="nav-link" href="{% url 'tragos' %}">Tragos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pizza.html">Pizza</a>
+            <a class="nav-link" href="{% url 'pizza' %}">Pizza</a>
           </li>
         </ul>
-        <a class="btn btn-secondary text-white fw-bold mx-lg-2 my-2 btn-pedido" href="./form.html">
+        <a class="btn btn-secondary text-white fw-bold mx-lg-2 my-2 btn-pedido" href="{% url 'form' %}">
           Pedido
         </a>
         <form class="d-flex" role="search">
@@ -46,11 +47,11 @@
     <div class="row row-gap-3 justify-content-center">
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/pizza-margarita.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/pizza-margarita.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Peperoni</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-1">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
@@ -58,11 +59,11 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/pizza-mozzarella.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/pizza-mozzarella.jpg' %});"></div>
           <div class="card-body">
-            <h5 class="titutlo">Napolitana</h5>
+            <h5 class="titulo">Napolitana</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-2">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
@@ -70,11 +71,11 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/pizza.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/pizza.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Vegetariana</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-3">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
@@ -82,11 +83,11 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/napolitana.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/napolitana.jpg' %});"></div>
           <div class="card-body">
-            <h5 class="titulo">Champiñon</h5>
+            <h5 class="titulo">Champiñón</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-4">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
@@ -94,11 +95,11 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/peperoni.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/peperoni.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Española</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-5">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
@@ -106,18 +107,18 @@
       <br>
       <div class="col-12 col-sm-4 col-md-3 col-lg-3">
         <div class="card shadow">
-          <div class="img-card-wallpaper" style="background-image: url(./assets/img/pizza-mozzarella.jpg);"></div>
+          <div class="img-card-wallpaper" style="background-image: url({% static 'cliente/img/pizza-mozzarella.jpg' %});"></div>
           <div class="card-body">
             <h5 class="titulo">Pollo</h5>
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-6">
-              Ver mas detalles
+              Ver más detalles
             </button>
           </div>
         </div>
       </div>
     </div>
     <!-- Modal Entradas -->
-    <div class="modal" id="modal-1" data-bs-backdrop="static" >
+    <div class="modal" id="modal-1" data-bs-backdrop="static">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -125,7 +126,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p id="contenedor">Queso mazzarella, peperoni, oregano</p>
+            <p id="contenedor">Queso mozzarella, peperoni, orégano</p>
           </div>
           <div class="modal-footer">
             <h5 class="titulo">10.900</h5>
@@ -143,7 +144,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p id="contenedor">Queso mazzarella, jamon, tomate, aceituna, oregano</p>
+            <p id="contenedor">Queso mozzarella, jamón, tomate, aceituna, orégano</p>
           </div>
           <div class="modal-footer">
             <h5 class="titulo">10.900</h5>
@@ -161,7 +162,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p id="contenedor">Queso mazzarella, choclo, tomate, champiñon, pimenton, oregano</p>          
+            <p id="contenedor">Queso mozzarella, choclo, tomate, champiñón, pimentón, orégano</p>          
           </div>
           <div class="modal-footer">
             <h5 class="titulo">10.900</h5>
@@ -175,11 +176,11 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Champiñon</h4>
+            <h4 class="modal-title">Champiñón</h4>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p id="contenedor">Queso mazzarella, champiñon, tomate, aceituna, oregano</p>          
+            <p id="contenedor">Queso mozzarella, champiñón, tomate, aceituna, orégano</p>          
           </div>
           <div class="modal-footer">
             <h5 class="titulo">10.900</h5>
@@ -197,7 +198,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p id="contenedor">Queso mazzarella, choricillo, tomate, aceituna, oregano</p>          
+            <p id="contenedor">Queso mozzarella, choricillo, tomate, aceituna, orégano</p>          
           </div>
           <div class="modal-footer">
             <h5 class="titulo">10.900</h5>
@@ -215,7 +216,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p id="contenedor">Queso mazzarella, pollo, champiñon, tomate, aceituna, oregano</p>
+            <p id="contenedor">Queso mozzarella, pollo, champiñón, tomate, aceituna, orégano</p>
           </div>
           <div class="modal-footer">
             <h5 class="titulo">10.900</h5>
@@ -227,6 +228,6 @@
     </div>
   </div>
     
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>    
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>    
 </body>
 </html>
