--- a/cliente/templates/cliente/index.html
+++ b/cliente/templates/cliente/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-  <!-- Barra de navegacion -->
+  <!-- Barra de navegación -->
   <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Al Fondo Bar</a>
+      <a class="navbar-brand" href="{% url 'index' %}">Al Fondo Bar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,19 +22,19 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="./entrada.html">Entrada</a>
+            <a class="nav-link" aria-current="page" href="{% url 'entrada' %}">Entrada</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="./cocteles.html">Cocteles</a>
+            <a class="nav-link" href="{% url 'cocteles' %}">Cocteles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./tragos.html">Tragos</a>
+            <a class="nav-link" href="{% url 'tragos' %}">Tragos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pizza.html">Pizza</a>
+            <a class="nav-link" href="{% url 'pizza' %}">Pizza</a>
           </li>
         </ul>
-        <a class="btn btn-secondary text-white fw-bold mx-lg-2 my-2 btn-pedido" href="./form.html">
+        <a class="btn btn-secondary text-white fw-bold mx-lg-2 my-2 btn-pedido" href="{% url 'form' %}">
           Pedido
         </a>
         <form class="d-flex" role="search">
@@ -48,14 +48,14 @@
   <!-- Carrusel -->
   <div id="Auto" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <!--Imagenes Carrusel-->
+      <!-- Imagenes Carrusel -->
       <div class="carousel-item active img-carrousel">
         <img src="{% static 'cliente/img/bar1.jpg' %}" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item img-carrousel">
         <img src="{% static 'cliente/img/bar-1-1024x576.jpg' %}" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item img-carrousel" >
+      <div class="carousel-item img-carrousel">
         <img src="{% static 'cliente/img/bar2.jpg' %}" class="d-block w-100" alt="...">
       </div>
     </div>
@@ -71,35 +71,35 @@
   <div class="contenedor">
     <div id="contenedor">
       <br>
-      <div class="container-fluid bg-ligth py-5 text-center">
-        <div class="row ">
+      <div class="container-fluid bg-light py-5 text-center">
+        <div class="row">
           <!-- Tarjeta Cocteles -->
           <div class="col-6 col-sm-6 mb-4 col-md-3">
             <img src="{% static 'cliente/img/cocteles.jpeg' %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
-            <h2 class="Titulo">Cocteles</h2> <!-- Clase titulo crear clase-->
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
-            <a href="cocteles.html"><button class="botones">Cocteles</button></a> <!-- Clase botones crear clase -->
+            <h2 class="Titulo">Cocteles</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <a href="{% url 'cocteles' %}"><button class="botones">Cocteles</button></a>
           </div>
           <!-- Tarjeta Entrada -->
           <div class="col-6 col-sm-6 col-md-3">
             <img src="{% static 'cliente/img/plato-entrada-.jpg' %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
-            <h2 class="Titulo">Entrada</h2> <!-- Clase titulo crear clase -->
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
-            <a href="entrada.html"><button class="botones"> Entrada </button></a> <!-- Clase botones crear clase -->
+            <h2 class="Titulo">Entrada</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <a href="{% url 'entrada' %}"><button class="botones">Entrada</button></a>
           </div>
           <!-- Tarjeta Tragos -->
           <div class="col-6 col-sm-6 mb-4 col-md-3">
             <img src="{% static 'cliente/img/tragos1.png' %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
-            <h2 class="Titulo">Tragos</h2> <!-- Clase titulo crear clase -->
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
-            <a href="tragos.html"><button class="botones"> Tragos </button></a> <!-- Clase botones crear clase -->
+            <h2 class="Titulo">Tragos</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <a href="{% url 'tragos' %}"><button class="botones">Tragos</button></a>
           </div>
           <!-- Tarjeta Pizza -->
           <div class="col-6 col-sm-6 col-md-3">
             <img src="{% static 'cliente/img/pizza.jpg' %}" class="img-tarjetas rounded-circle shadow-lg" alt="...">
-            <h2 class="Titulo">Pizza</h2> <!-- Clase titulo crear clase -->
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
-            <a href="pizza.html"><button class="botones"> Pizza </button></a> <!-- Clase botones crear clase -->
+            <h2 class="Titulo">Pizza</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <a href="{% url 'pizza' %}"><button class="botones">Pizza</button></a>
           </div>
         </div>
       </div>
@@ -108,20 +108,18 @@
       <h2>Horario de atención</h2>
       <h5>LUNES A VIERNES</h5>
       <h6>17:00 a 02:00</h6>
-      <h5>SABADOS y FESTIVOS</h5>
+      <h5>SÁBADOS y FESTIVOS</h5>
       <h6>17:00 a 03:30</h6>
     </div>
-    <div class="container text-center ">
-      <h3>Datos economicos:</h3>
+    <div class="container text-center">
+      <h3>Datos económicos:</h3>
       <ul id="datos-economicos"></ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"></script>
-    <script src="./assets/js/index.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-      <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
+    <script src="{% static 'cliente/js/index.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </body>
 
 </html>
